--- a/data-architect.html
+++ b/data-architect.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-exlservice.icims.com/jobs/7039/data-architect%2C-decision-analytics-services/job'>Data Architect, Decision Analytics Services ... - EXL Service | Careers</a></h5> 
+<h5><a href='https://careers-exlservice.icims.com/jobs/7039/data-architect%2C-decision-analytics-services/job'>Data Architect, Decision Analytics Services ... - EXL Service | Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Exl Service is now hiring a Data Architect, Decision Analytics Services in San 
 Jose, California. Review all of the job details and apply today!</p>
@@ -70,7 +70,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -132,7 +132,7 @@ applications?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<h5><a href='https://quast.workable.com/j/47C941B44F'>Quast Ltd - Jobs: Data Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quast.workable.com/j/47C941B44F'>Quast Ltd - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -153,7 +153,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
@@ -459,7 +459,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/c2b42c10-d9b8-4e0f-9ec4-6155c16fbd9c'>Datacom - Senior Security Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c2b42c10-d9b8-4e0f-9ec4-6155c16fbd9c'>Datacom - Senior Security Architect</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
