--- a/software.html
+++ b/software.html
@@ -48,19 +48,19 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://seequent.workable.com/j/233BD8D624'>Seequent - Jobs: Senior Software Developer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/D9E5242BA4'>Seequent - Jobs: Software Developer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/D9E5242BA4'>Seequent - Jobs: Software Developer - Apply online</a></h5> 
+<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/FF7D915E62'>Seequent - Jobs: Software Developer (2 roles) - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/FF7D915E62'>Seequent - Jobs: Software Developer (2 roles) - Apply online</a></h5> 
+<p><span class="badge badge-light">New Zealand</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/quotient/job/o1Ynafwg'>Quotient Technology Inc. Careers - Software Engineer-1</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/starry/jobs/4354718002'>Job Application for Software Engineer (Rust) at Starry</a></h5> 
@@ -76,10 +76,10 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/magnitude/job/orwBafws'>Magnitude Software Careers - Senior C++ & Go Software Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -275,11 +275,11 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692364239-senior-software-developer-c-c-for-automated-driving'>Bosch Group Senior Software Developer (C/C++) for Automated Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692364239-senior-software-developer-c-c-for-automated-driving'>Bosch Group Senior Software Developer (C/C++) for Automated Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Abstatt, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -319,7 +319,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forwardnetworks/eed02019-9787-42f4-a60a-5cf94789d7b1'>Forward Networks - Software Engineer - Compilers and Tools</a></h5> 
+<h5><a href='https://jobs.lever.co/forwardnetworks/eed02019-9787-42f4-a60a-5cf94789d7b1'>Forward Networks - Software Engineer - Compilers and Tools</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -354,6 +354,17 @@
 <h5><a href='https://charger-logistics-inc.workable.com/j/9134B07729'>Charger Logistics Inc - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Santiago Mexico</span></p>
 <p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://careers-dnvgl.icims.com/jobs/12815/software-developer/job'>Software Developer in Rostock | Careers at Rostock - Maritime ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 19, 2019 ... Experience with data driven applications using SQL-databases, data 
+manipulation (DML) and triggers/ procedures (PL/ SQL). Good English language 
+skills,?...</p>
+<hr/>
+<h5><a href='https://uscareers-waters.icims.com/jobs/10397/principal-embedded-software-engineer/job'>Principal Embedded Software Engineer in Milford, Massachusetts ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 13, 2019 ... Additionally desirable: familiarity with good laboratory practice related to testing, 
+test data collection, documentation and presentation, interpretation of wiring?...</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -439,14 +450,6 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <hr/>
 <h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/istreamplanet/job/oY4Cafwy'>iStreamPlanet Careers - Senior Software Engineer - Web Development</a></h5> 
-<p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
